--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
     "author": "Nick Ingalls <nick@ingalls.ca>",
     "license": "ISC",
     "devDependencies": {
-        "@types/xml2js": "^0.4.12",
-        "eslint": "^8.0.0",
-        "ts-node": "^10.9.1",
+        "eslint": "^9.0.0",
         "typescript": "^5.0.4",
-        "typescript-eslint": "^7.6.0"
+        "typescript-eslint": "^8.0.0"
     },
     "dependencies": {
-        "@sinclair/typebox": "^0.32.20",
-        "@tak-ps/etl": "^4.3.3",
-        "@types/geojson": "^7946.0.10",
-        "moment": "^2.30.1"
+        "@sinclair/typebox": "^0.34.0",
+        "@tak-ps/etl": "^6.5.1"
     }
 }
